--- a/proftpd-ldap.conf
+++ b/proftpd-ldap.conf
@@ -1,4 +1,5 @@
-LDAPHost			"localhost"
+LDAPServer			"localhost"
 LDAPPrefix			"dc=horde,dc=net"
 LDAPDN				"cn=thedn,dc=horde,dc=net"
 LDAPDNPass			"ldap_dnpass"
+LDAPNegativeCache	on
