--- a/proftpd-ldap.conf
+++ b/proftpd-ldap.conf
@@ -1,5 +1,10 @@
-LDAPServer			"localhost"
-LDAPPrefix			"dc=horde,dc=net"
-LDAPDN				"cn=thedn,dc=horde,dc=net"
-LDAPDNPass			"ldap_dnpass"
-LDAPNegativeCache	on
+# At the very least, you'll need the following configuration directives
+LDAPServer            localhost
+LDAPDNInfo            cn=your-dn,dc=horde,dc=net dnpass
+LDAPDoAuth            on "dc=horde,dc=net"
+LDAPDoUIDLookups      off
+LDAPDoGIDLookups      off
+# This one isn't necessary, but can boost performance under certain
+# situations. See the mod_ldap patches to doc/Configuration.html for more
+# information.
+LDAPNegativeCache     on
