--- a/mod_ldap.conf
+++ b/mod_ldap.conf
@@ -1,7 +1,7 @@
 # At the very least, you'll need the following configuration directives
 LDAPServer            localhost
 LDAPDNInfo            cn=your-dn,dc=horde,dc=net dnpass
-LDAPDoAuth            on "dc=horde,dc=net"
+LDAPDoAuth            on dc=horde,dc=net
 # This one isn't necessary, but can boost performance under certain
 # situations. See the mod_ldap patches to doc/Configuration.html for more
 # information.
