--- a/mod_ldap.conf
+++ b/mod_ldap.conf
@@ -1,4 +1,4 @@
 # At the very least, you'll need the following configuration directives
-LDAPServer            localhost
-LDAPDNInfo            cn=your-dn,dc=horde,dc=net dnpass
-LDAPDoAuth            on dc=horde,dc=net
+LDAPServer localhost
+LDAPDNInfo cn=your-dn,dc=example,dc=com dnpass
+LDAPDoAuth on dc=example,dc=com
